[profile.dev]
incremental = true

[profile.release]
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
    "account-decoder",
    "accounts-bench",
    "accounts-cluster-bench",
    "accounts-db",
    "accounts-db/store-tool",
    "banking-bench",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bench-streamer",
    "bench-tps",
    "bloom",
    "bucket_map",
    "cargo-registry",
    "clap-utils",
    "clap-v3-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "connection-cache",
    "core",
    "cost-model",
    "dos",
    "download-utils",
    "entry",
    "faucet",
    "frozen-abi",
    "frozen-abi/macro",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "install",
    "keygen",
    "ledger",
    "ledger-tool",
    "local-cluster",
    "log-analyzer",
    "logger",
    "measure",
    "memory-management",
    "merkle-root-bench",
    "merkle-tree",
    "metrics",
    "net-shaper",
    "net-utils",
    "notifier",
    "perf",
    "poh",
    "poh-bench",
    "program-runtime",
    "program-test",
    "programs/address-lookup-table",
    "programs/address-lookup-table-tests",
    "programs/bpf-loader-tests",
    "programs/bpf_loader",
    "programs/bpf_loader/gen-syscall-list",
    "programs/compute-budget",
    "programs/config",
    "programs/ed25519-tests",
    "programs/loader-v4",
    "programs/stake",
    "programs/system",
    "programs/vote",
    "programs/zk-token-proof",
    "programs/zk-token-proof-tests",
    "pubsub-client",
    "quic-client",
    "rayon-threadlimit",
    "rbpf-cli",
    "remote-wallet",
    "rpc",
    "rpc-client",
    "rpc-client-api",
    "rpc-client-nonce-utils",
    "rpc-test",
    "runtime",
    "runtime-transaction",
    "sdk",
    "sdk/cargo-build-bpf",
    "sdk/cargo-build-sbf",
    "sdk/cargo-test-bpf",
    "sdk/cargo-test-sbf",
    "sdk/gen-headers",
    "sdk/macro",
    "sdk/program",
    "send-transaction-service",
    "stake-accounts",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
    "streamer",
    "lvm",
    "test-validator",
    "thin-client",
    "tokens",
    "tpu-client",
    "transaction-dos",
    "transaction-status",
    "turbine",
    "udp-client",
    "unified-scheduler-logic",
    "unified-scheduler-pool",
    "upload-perf",
    "validator",
    "version",
    "vote",
    "watchtower",
    "wen-restart",
    "zk-keygen",
    "zk-token-sdk",
    
    "lumos-program-library/associated-token-account/program",
    "lumos-program-library/associated-token-account/program-test",
    "lumos-program-library/binary-option/program",
    "lumos-program-library/binary-oracle-pair/program",
    "lumos-program-library/examples/rust/cross-program-invocation",
    "lumos-program-library/examples/rust/custom-heap",
    "lumos-program-library/examples/rust/logging",
    "lumos-program-library/examples/rust/sysvar",
    "lumos-program-library/examples/rust/transfer-lamports",
    "lumos-program-library/examples/rust/transfer-tokens",
    "lumos-program-library/feature-proposal/program",
    "lumos-program-library/feature-proposal/cli",
    "lumos-program-library/governance/addin-mock/program",
    "lumos-program-library/governance/addin-api",
    "lumos-program-library/governance/program",
    "lumos-program-library/governance/test-sdk",
    "lumos-program-library/governance/tools",
    "lumos-program-library/governance/chat/program",
    "lumos-program-library/instruction-padding/program",
    "lumos-program-library/libraries/discriminator",
    "lumos-program-library/libraries/concurrent-merkle-tree",
    "lumos-program-library/libraries/math",
    "lumos-program-library/libraries/merkle-tree-reference",
    "lumos-program-library/libraries/pod",
    "lumos-program-library/libraries/program-error",
    "lumos-program-library/libraries/tlv-account-resolution",
    "lumos-program-library/libraries/type-length-value",
    "lumos-program-library/libraries/type-length-value-derive-test",
    "lumos-program-library/memo/program",
    "lumos-program-library/name-service/program",
    "lumos-program-library/managed-token/program",
    "lumos-program-library/record/program",
    "lumos-program-library/shared-memory/program",
    "lumos-program-library/single-pool/cli",
    "lumos-program-library/single-pool/program",
    "lumos-program-library/stake-pool/cli",
    "lumos-program-library/stake-pool/program",
    "lumos-program-library/stateless-asks/program",
    "lumos-program-library/token-collection/program",
    "lumos-program-library/token-group/example",
    "lumos-program-library/token-group/interface",
    "lumos-program-library/token-lending/cli",
    "lumos-program-library/token-lending/program",
    "lumos-program-library/token-metadata/example",
    "lumos-program-library/token-metadata/interface",
    "lumos-program-library/token-swap/program",
    "lumos-program-library/token-swap/program/fuzz",
    "lumos-program-library/token-upgrade/cli",
    "lumos-program-library/token-upgrade/program",
    "lumos-program-library/token-wrap/program",
    "lumos-program-library/token/cli",
    "lumos-program-library/token/program",
    "lumos-program-library/token/program-2022",
    "lumos-program-library/token/program-2022-test",
    "lumos-program-library/token/transfer-hook/cli",
    "lumos-program-library/token/transfer-hook/example",
    "lumos-program-library/token/transfer-hook/interface",
    "lumos-program-library/token/confidential-transfer/ciphertext-arithmetic",
    "lumos-program-library/token/confidential-transfer/proof-extraction",
    "lumos-program-library/token/confidential-transfer/proof-generation",
    "lumos-program-library/token/confidential-transfer/proof-tests",
    "lumos-program-library/token/client",
    "lumos-program-library/utils/cgen",
    "lumos-program-library/utils/test-client",
    "lumos-program-library/token-lending/flash_loan_receiver",

]


exclude = ["programs/sbf"]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
homepage = "https://www.uuhb.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
Inflector = "0.11.4"
aquamarine = "0.3.3"
aes-gcm-siv = "0.10.3"
ahash = "0.8.10"
anyhow = "1.0.80"
arbitrary = "1.3.2"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.7"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-mutex = "1.4.0"
async-trait = "0.1.77"
atty = "0.2.11"
backoff = "0.4.0"
base64 = "0.22.0"
bincode = "1.3.3"
bitflags = { version = "2.4.2", features = ["serde"] }
blake3 = "1.5.0"
block-buffer = "0.10.4"
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
bs58 = "0.4.0"
bv = "0.11.1"
byte-unit = "4.0.19"
bytecount = "0.6.7"
bytemuck = "1.14.3"
byteorder = "1.5.0"
bytes = "1.5"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cc = "1.0.83"
chrono = { version = "0.4.34", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
console = "0.15.8"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.32"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.12"
csv = "1.3.0"
ctrlc = "3.4.2"
curve25519-dalek = "3.2.1"
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
derivative = "2.2.0"
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
either = "1.10.0"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2 = "1.0.28"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.30"
futures-util = "0.3.29"
gag = "1.0.0"
generic-array = { version = "0.14.7", default-features = false }
gethostname = "0.2.3"
getrandom = "0.2.10"
goauth = "0.13.1"
hex = "0.4.3"
hidapi = { version = "2.6.1", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.0.1"
hyper = "0.14.28"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.11"
indexmap = "2.2.5"
indicatif = "0.17.8"
itertools = "0.10.5"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.68"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy_static = "1.4.0"
libc = "0.2.153"
libloading = "0.7.4"
libsecp256k1 = "0.6.0"
light-poseidon = "0.2.0"
log = "0.4.21"
lru = "0.7.7"
lz4 = "1.24.0"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = "3"
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.26.4"
num-bigint = "0.4.4"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.16.0"
num_enum = "0.7.2"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.2.1"
proc-macro2 = "1.0.79"
proptest = "1.4"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.10.2"
quinn-proto = "0.10.6"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
raptorq = "1.8.1"
rayon = "1.9.0"
reed-solomon-erasure = "6.0.0"
regex = "1.10.3"
reqwest = { version = "0.11.23", default-features = false }
rolling-file = "0.2.0"
rpassword = "7.3"
rustc_version = "0.4"
rustls = { version = "0.21.10", default-features = false, features = ["quic"] }
rustversion = "1.0.14"
scopeguard = "1.2.0"
semver = "1.0.22"
seqlock = "0.2.0"
serde = "1.0.197"
serde_bytes = "0.11.14"
serde_derive = "1.0.103"
serde_json = "1.0.114"
serde_with = { version = "2.3.3", default-features = false }
serde_yaml = "0.9.32"
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
signal-hook = "0.3.17"
siphasher = "0.3.11"
smallvec = "1.13.1"
smpl_jwt = "0.7.1"
socket2 = "0.5.6"
soketto = "0.7"


lumos-account-decoder = { path = "account-decoder", version = "=2.0.0" }
lumos-accounts-db = { path = "accounts-db", version = "=2.0.0" }
lumos-address-lookup-table-program = { path = "programs/address-lookup-table", version = "=2.0.0" }
lumos-banks-client = { path = "banks-client", version = "=2.0.0" }
lumos-banks-interface = { path = "banks-interface", version = "=2.0.0" }
lumos-banks-server = { path = "banks-server", version = "=2.0.0" }
lumos-bench-tps = { path = "bench-tps", version = "=2.0.0" }
lumos-bloom = { path = "bloom", version = "=2.0.0" }
lumos-bpf-loader-program = { path = "programs/bpf_loader", version = "=2.0.0" }
lumos-bucket-map = { path = "bucket_map", version = "=2.0.0" }
lumos-cargo-registry = { path = "cargo-registry", version = "=2.0.0" }
lumos-clap-utils = { path = "clap-utils", version = "=2.0.0" }
lumos-clap-v3-utils = { path = "clap-v3-utils", version = "=2.0.0" }
lumos-cli = { path = "cli", version = "=2.0.0" }
lumos-cli-config = { path = "cli-config", version = "=2.0.0" }
lumos-cli-output = { path = "cli-output", version = "=2.0.0" }
lumos-client = { path = "client", version = "=2.0.0" }
lumos-compute-budget-program = { path = "programs/compute-budget", version = "=2.0.0" }
lumos-config-program = { path = "programs/config", version = "=2.0.0" }
lumos-connection-cache = { path = "connection-cache", version = "=2.0.0", default-features = false }
lumos-core = { path = "core", version = "=2.0.0" }
lumos-cost-model = { path = "cost-model", version = "=2.0.0" }
lumos-download-utils = { path = "download-utils", version = "=2.0.0" }
lumos-entry = { path = "entry", version = "=2.0.0" }
lumos-faucet = { path = "faucet", version = "=2.0.0" }
lumos-frozen-abi = { path = "frozen-abi", version = "=2.0.0" }
lumos-frozen-abi-macro = { path = "frozen-abi/macro", version = "=2.0.0" }
lumos-genesis = { path = "genesis", version = "=2.0.0" }
lumos-genesis-utils = { path = "genesis-utils", version = "=2.0.0" }
lumos-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=2.0.0" }
lumos-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "=2.0.0" }
lumos-gossip = { path = "gossip", version = "=2.0.0" }
lumos-ledger = { path = "ledger", version = "=2.0.0" }
lumos-loader-v4-program = { path = "programs/loader-v4", version = "=2.0.0" }
lumos-local-cluster = { path = "local-cluster", version = "=2.0.0" }
lumos-logger = { path = "logger", version = "=2.0.0" }
lumos-measure = { path = "measure", version = "=2.0.0" }
lumos-merkle-tree = { path = "merkle-tree", version = "=2.0.0" }
lumos-metrics = { path = "metrics", version = "=2.0.0" }
lumos-net-utils = { path = "net-utils", version = "=2.0.0" }
lumos-notifier = { path = "notifier", version = "=2.0.0" }
lumos-perf = { path = "perf", version = "=2.0.0" }
lumos-poh = { path = "poh", version = "=2.0.0" }
lumos-program = { path = "sdk/program", version = "=2.0.0" }
lumos-program-runtime = { path = "program-runtime", version = "=2.0.0" }
lumos-program-test = { path = "program-test", version = "=2.0.0" }
lumos-pubsub-client = { path = "pubsub-client", version = "=2.0.0" }
lumos-quic-client = { path = "quic-client", version = "=2.0.0" }
lumos-rayon-threadlimit = { path = "rayon-threadlimit", version = "=2.0.0" }
lumos-remote-wallet = { path = "remote-wallet", version = "=2.0.0", default-features = false }
lumos-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "=2.0.0" }
lumos-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "=2.0.0" }
lumos-rpc = { path = "rpc", version = "=2.0.0" }
lumos-rpc-client = { path = "rpc-client", version = "=2.0.0", default-features = false }
lumos-rpc-client-api = { path = "rpc-client-api", version = "=2.0.0" }
lumos-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils", version = "=2.0.0" }
lumos-runtime = { path = "runtime", version = "=2.0.0" }
lumos-runtime-transaction = { path = "runtime-transaction", version = "=2.0.0" }
lumos-sdk = { path = "sdk", version = "=2.0.0" }
lumos-sdk-macro = { path = "sdk/macro", version = "=2.0.0" }
lumos-send-transaction-service = { path = "send-transaction-service", version = "=2.0.0" }
lumos-stake-program = { path = "programs/stake", version = "=2.0.0" }
lumos-storage-bigtable = { path = "storage-bigtable", version = "=2.0.0" }
lumos-storage-proto = { path = "storage-proto", version = "=2.0.0" }
lumos-streamer = { path = "streamer", version = "=2.0.0" }
lumos-lvm = { path = "lvm", version = "=2.0.0" }
lumos-system-program = { path = "programs/system", version = "=2.0.0" }
lumos-test-validator = { path = "test-validator", version = "=2.0.0" }
lumos-thin-client = { path = "thin-client", version = "=2.0.0" }
lumos-tpu-client = { path = "tpu-client", version = "=2.0.0", default-features = false }
lumos-transaction-status = { path = "transaction-status", version = "=2.0.0" }
lumos-turbine = { path = "turbine", version = "=2.0.0" }
lumos-udp-client = { path = "udp-client", version = "=2.0.0" }
lumos-version = { path = "version", version = "=2.0.0" }
lumos-vote = { path = "vote", version = "=2.0.0" }
lumos-vote-program = { path = "programs/vote", version = "=2.0.0" }
lumos-wen-restart = { path = "wen-restart", version = "=2.0.0" }
lumos-zk-keygen = { path = "zk-keygen", version = "=2.0.0" }
lumos-zk-token-proof-program = { path = "programs/zk-token-proof", version = "=2.0.0" }
lumos-zk-token-sdk = { path = "zk-token-sdk", version = "=2.0.0" }

lumos-security-txt = "1.1.1"
lumos-rbpf = "=0.8.2"
lumos-nohash-hasher = "0.2.1"

lpl-token = { path = "lumos-program-library/token/program" }
lpl-associated-token-account = { path = "lumos-program-library/associated-token-account/program" }
lpl-instruction-padding = { path = "lumos-program-library/instruction-padding" }
lpl-memo = { path = "lumos-program-library/memo" }
lpl-pod = { path = "lumos-program-library/libraries/pod" }
lpl-token-2022 = { path = "lumos-program-library/token/program-2022" }
lpl-token-group-interface = { path = "lumos-program-library/token-group/interface" }
lpl-token-metadata-interface = { path = "lumos-program-library/token-metadata/interface" }



static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.4.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.3"
tar = "0.4.40"
tarpc = "0.29.0"
tempfile = "3.10.1"
test-case = "3.3.1"
thiserror = "1.0.57"
tiny-bip39 = "0.8.2"
# Update lumos-tokio patch below when updating this version
tokio = "1.29.1"
tokio-serde = "0.8"
tokio-stream = "0.1.14"
tokio-tungstenite = "0.20.1"
tokio-util = "0.6"
toml = "0.8.10"
tonic = "0.9.2"
tonic-build = "0.9.2"
trees = "0.4.2"
tungstenite = "0.20.1"
uriparse = "0.6.4"
url = "2.5.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.50"
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { version = "1.3", default-features = false }
zstd = "0.11.2"

[patch.crates-io]
crossbeam-epoch = { git = "https://github.com/gaokanxu/lumos-crossbeam", branch = "main" }
lumos-program = { path = "sdk/program" }
lumos-zk-token-sdk = { path = "zk-token-sdk" }

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/gaokanxu/lumos-curve25519-dalek.git"
branch = "main"

[patch.crates-io.tokio]
git = "https://github.com/gaokanxu/lumos-tokio.git"
branch = "main"

[patch.crates-io.lumos-rbpf]
git = "https://github.com/gaokanxu/lumos-rbpf.git"
branch = "main"

[patch.crates-io.lumos-nohash-hasher]
git = "https://github.com/gaokanxu/lumos-nohash-hasher.git"
branch = "main"

[patch.crates-io.lumos-security-txt]
 git = "https://github.com/gaokanxu/lumos-security-txt"
 branch = "main"
