
[profile.dev]
incremental = true
9999
88888
-aaaa
？bbb
cccc
ddddd
cccc
ggggg
[profile.release]
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"


[workspace]
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
homepage = "https://www.uuhb.com"
edition = "2021"

members = [
    "account-decoder",
    "accounts-bench",
    "accounts-cluster-bench",
    "accounts-db",
    "accounts-db/store-tool",
    "banking-bench",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bench-streamer",
    "bench-tps",
    "bloom",
    "bucket_map",
    "cargo-registry",
    "clap-utils",
    "clap-v3-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "connection-cache",
    "core",
    "cost-model",
    "dos",
    "download-utils",
    "entry",
    "faucet",
    "frozen-abi",
    "frozen-abi/macro",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "install",
    "keygen",
    "ledger",
    "ledger-tool",
    "local-cluster",
    "log-analyzer",
    "logger",
    "measure",
    "memory-management",
    "merkle-root-bench",
    "merkle-tree",
    "metrics",
    "net-shaper",
    "net-utils",
    "notifier",
    "perf",
    "poh",
    "poh-bench",
    "program-runtime",
    "program-test",
    "programs/address-lookup-table",
    "programs/address-lookup-table-tests",
    "programs/bpf-loader-tests",
    "programs/bpf_loader",
    "programs/bpf_loader/gen-syscall-list",
    "programs/compute-budget",
    "programs/config",
    "programs/ed25519-tests",
    "programs/loader-v4",
    "programs/stake",
    "programs/system",
    "programs/vote",
    "programs/zk-token-proof",
    "programs/zk-token-proof-tests",
    "pubsub-client",
    "quic-client",
    "rayon-threadlimit",
    "rbpf-cli",
    "remote-wallet",
    "rpc",
    "rpc-client",
    "rpc-client-api",
    "rpc-client-nonce-utils",
    "rpc-test",
    "runtime",
    "runtime-transaction",
    "sdk",
    "sdk/cargo-build-bpf",
    "sdk/cargo-build-sbf",
    "sdk/cargo-test-bpf",
    "sdk/cargo-test-sbf",
    "sdk/gen-headers",
    "sdk/macro",
    "sdk/program",
    "send-transaction-service",
    "stake-accounts",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
    "streamer",
    "lvm",
    "test-validator",
    "thin-client",
    "tokens",
    "tpu-client",
    "transaction-dos",
    "transaction-status",
    "turbine",
    "udp-client",
    "unified-scheduler-logic",
    "unified-scheduler-pool",
    "upload-perf",
    "validator",
    "version",
    "vote",
    "watchtower",
    "wen-restart",
    "zk-keygen",
    "zk-token-sdk",
    
    "lumos-program-library/associated-token-account/program",
    "lumos-program-library/associated-token-account/program-test",
    "lumos-program-library/binary-option/program",
    "lumos-program-library/binary-oracle-pair/program",
    "lumos-program-library/examples/rust/cross-program-invocation",
    "lumos-program-library/examples/rust/custom-heap",
    "lumos-program-library/examples/rust/logging",
    "lumos-program-library/examples/rust/sysvar",
    "lumos-program-library/examples/rust/transfer-lamports",
    "lumos-program-library/examples/rust/transfer-tokens",
    "lumos-program-library/feature-proposal/program",
    "lumos-program-library/feature-proposal/cli",
    "lumos-program-library/governance/addin-mock/program",
    "lumos-program-library/governance/addin-api",
    "lumos-program-library/governance/program",
    "lumos-program-library/governance/test-sdk",
    "lumos-program-library/governance/tools",
    "lumos-program-library/governance/chat/program",
    "lumos-program-library/instruction-padding/program",
    "lumos-program-library/libraries/discriminator",
    "lumos-program-library/libraries/concurrent-merkle-tree",
    "lumos-program-library/libraries/math",
    "lumos-program-library/libraries/merkle-tree-reference",
    "lumos-program-library/libraries/pod",
    "lumos-program-library/libraries/program-error",
    "lumos-program-library/libraries/tlv-account-resolution",
    "lumos-program-library/libraries/type-length-value",
    "lumos-program-library/libraries/type-length-value-derive-test",
    "lumos-program-library/memo/program",
    "lumos-program-library/name-service/program",
    "lumos-program-library/managed-token/program",
    "lumos-program-library/record/program",
    "lumos-program-library/shared-memory/program",
    "lumos-program-library/single-pool/cli",
    "lumos-program-library/single-pool/program",
    "lumos-program-library/stake-pool/cli",
    "lumos-program-library/stake-pool/program",
    "lumos-program-library/stateless-asks/program",
    "lumos-program-library/token-collection/program",
    "lumos-program-library/token-group/example",
    "lumos-program-library/token-group/interface",
    "lumos-program-library/token-lending/cli",
    "lumos-program-library/token-lending/program",
    "lumos-program-library/token-metadata/example",
    "lumos-program-library/token-metadata/interface",
    "lumos-program-library/token-swap/program",
    "lumos-program-library/token-swap/program/fuzz",
    "lumos-program-library/token-upgrade/cli",
    "lumos-program-library/token-upgrade/program",
    "lumos-program-library/token-wrap/program",
    "lumos-program-library/token/cli",
    "lumos-program-library/token/program",
    "lumos-program-library/token/program-2022",
    "lumos-program-library/token/program-2022-test",
    "lumos-program-library/token/transfer-hook/cli",
    "lumos-program-library/token/transfer-hook/example",
    "lumos-program-library/token/transfer-hook/interface",
    "lumos-program-library/token/confidential-transfer/ciphertext-arithmetic",
    "lumos-program-library/token/confidential-transfer/proof-extraction",
    "lumos-program-library/token/confidential-transfer/proof-generation",
    "lumos-program-library/token/confidential-transfer/proof-tests",
    "lumos-program-library/token/client",
    "lumos-program-library/utils/cgen",
    "lumos-program-library/utils/test-client",
    "lumos-program-library/token-lending/flash_loan_receiver",
]

exclude = ["programs/sbf"]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos"
homepage = "https://www.uuhb.com/"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"


[workspace.dependencies]
Inflector = "0.11.4"
aquamarine = "0.3.3"
aes-gcm-siv = "0.11.1"
ahash = "0.8.10"
anyhow = "1.0.80"
approx = "0.5.1"
arbitrary = "1.3.2"
ark-bn254= "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "1.4.1"
arrayref = "0.3.8"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-mutex = "1.4.0"
async-trait = "0.1.77"
atty = "0.2.11"
backoff = "0.4.0"
base64= "0.22.0"
bincode = "1.3.3"
bitflags = "2.4.2"
blake3= { version = "1.5.0", features = ["digest", "traits-preview"] }
block-buffer = "0.10.4"
borsh = { version = "1.5.1", features = ["unstable__schema"] } 
borsh0-10 = { package = "borsh", version = "0.10.3" }
borsh0-9 = { package = "borsh", version = "0.9.3" }
bs58= "0.4.0"
bv = { version = "0.11.1", features = ["serde"] }
byte-unit = "4.0.19"
bytecount = "0.6.7"
byteorder = "1.5.0"
bytes = "1.5"
bzip2= "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cc = "1.0.83"
chrono = "0.4.34"
chrono-humanize = "0.2.3"
clap = { version = "4.5.15", features = ["cargo"] }
console = "0.15.8"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.32"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
csv = "1.3.0"
ctrlc = "3.4.2"
dashmap = "5.5.3"
derivation-path = "0.2.0"
derivative = "2.2.0"
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2= "0.5.0"
eager = "0.1.0"
either = "1.10.0"
enum_dispatch = "0.3.13"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2= "1.0.28"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.30"
futures-util = "0.3.29"
gag = "1.0.0"
generic-array = "0.14.7" 
gethostname = "0.2.3"
getrandom = "0.2.10"
goauth = "0.13.1"
hex = "0.4.3"
histogram = "0.6.9"
honggfuzz = "0.5"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.0.1"
hyper = "0.14.28"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.11"
indexmap = "2.2.5"
indicatif = "0.17.8"
itertools = "0.10.5"
jemallocator = "0.5.0"
js-sys = "0.3.68"
json5= "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy_static = "1.5.0"
libc = "0.2.153"
libloading = "0.7.4"
libsecp256k1= "0.6.0"
light-poseidon = "0.2.0"
libm = "0.2.8"
log = "0.4.21"
lru = "0.7.7"
lz4= "1.24.0"
memmap2= "0.5.10"
memoffset = "0.9"
merlin = "3"
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.26.4"
num-bigint = "0.4.4"
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
num_cpus = "1.16.0"
num_enum = "0.7.2"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2= "0.11.0"
pem = "1.1.1"
percentage = "0.1.0"
pickledb = "0.5.1"
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.2.1"
proc-macro2= "1.0.79"
proptest = "1.4"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = "0.2.2"
quinn = "0.10.2"
quinn-proto = "0.10.6"
quote = "1.0"
raptorq = "1.8.1"
rayon = "1.9.0"
reed-solomon-erasure = "6.0.0"
regex = "1.10.3"
reqwest = "0.11.23"
rolling-file = "0.2.0"
roots = "0.0.8"
rpassword = "7.3"
rustc_version = "0.4"
rustls = { version = "0.21.10" }
rustversion = "1.0.14"
scopeguard = "1.2.0"
semver = "1.0.22"
seqlock = "0.2.0"
serde = { version = "1.0.204", features = ["derive"] } 
serde_bytes = "0.11.14"
serde_derive = "1.0.103"
serde_json = "1.0.114"
serde_with = "2.3.3"
serde_yaml = "0.9.32"
serial_test = "2.0.0"
sha2= "0.10.8"
sha3= "0.10.8"
signal-hook = "0.3.17"
siphasher = "0.3.11"
smallvec = "1.13.1"
smpl_jwt = "0.7.1"
socket2= "0.5.6"
soketto = "0.7"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.4.1"
symlink = "0.1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.3"
tar = "0.4.40"
tarpc = "0.29.0"
tempfile = "3.10.1"
test-case = "3.3.1"
thiserror = "1.0.63"
tiny-bip39= "0.8.2"
toml = "0.8.10"
tonic = "0.9.2"
tonic-build = "0.9.2"
trees = "0.4.2"
tungstenite = "0.20.1"
#typenum = "1.12"
uint = "0.9.5"
uriparse = "0.6.4"
url = "2.5.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.50"
x509-parser = "0.14.0"
zeroize = "1.8.1"
zeroize_derive = "1.4.2"
zstd = "0.11.2"


# Update lumos-tokio patch below when updating this version
tokio = { git = "https://github.com/gaokanxu/tokio.git", branch = "main", package = "tokio" }
tokio-stream = { git = "https://github.com/gaokanxu/tokio.git", branch = "main", package = "tokio-stream" }
tokio-util = { git = "https://github.com/gaokanxu/tokio.git", branch = "main", package = "tokio-util" }
tokio-serde = { git = "https://github.com/gaokanxu/tokio-serde.git", branch = "main", package = "tokio-serde" }
tokio-tungstenite = { git = "https://github.com/gaokanxu/tokio-tungstenite.git", branch = "main", package = "tokio-tungstenite" }
rand0_7 = { git = "https://github.com/gaokanxu/rand0_7.git", branch = "main", package = "rand", version = "0.7.3" }
rand = { git = "https://github.com/gaokanxu/rand0_8.git", branch = "main", package = "rand", version = "0.8.5"}
rand_core = { git = "https://github.com/gaokanxu/rand0_8.git", branch = "main", package = "rand_core", version = "0.6.4" }
rand_chacha = { git = "https://github.com/gaokanxu/rand0_8.git", branch = "main", package = "rand_chacha", version = "0.3.1" }
rand_distr = { git = "https://github.com/gaokanxu/rand0_8.git", branch = "main", package = "rand_distr",version = "0.4.3" }

security-txt = { git = "https://github.com/gaokanxu/security-txt.git", branch = "main", package = "security-txt" }
rbpf = { git = "https://github.com/gaokanxu/rbpf.git", branch = "main", package = "rbpf" }
nohash-hasher = { git = "https://github.com/gaokanxu/nohash-hasher.git", branch = "main", package = "nohash-hasher" }
hidapi =  { git = "https://github.com/gaokanxu/hidapi.git", branch = "main", package = "hidapi" }
crossbeam-channel = { git = "https://github.com/gaokanxu/crossbeam.git", branch = "main", package = "crossbeam-channel" }
bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }
bytemuck-derive = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck_derive" }

#curve25519-dalek = { git = "https://github.com/gaokanxu/curve25519-dalek.git", branch = "main", package = "curve25519-dalek", features = ["digest"] }
#curve25519-dalek-derive = { git = "https://github.com/gaokanxu/curve25519-dalek.git", branch = "main", package = "curve25519-dalek-derive" }
#ed25519-dalek = { git = "https://github.com/gaokanxu/curve25519-dalek.git", branch = "main", package = "ed25519-dalek", features = ["std", "digest", "rand", "u64_backend"] }
#ed25519-dalek-bip32 = { git = "https://github.com/gaokanxu/curve25519-dalek.git", branch = "main", package = "ed25519-dalek-bip32", features = ["std"] }

curve25519-dalek = { path = "../curve25519-dalek/curve25519-dalek", features = ["alloc", "precomputed-tables", "zeroize", "serde", "rand_core"] }
curve25519-dalek-derive = { path = "../curve25519-dalek/curve25519-dalek-derive" }
ed25519-dalek = { path = "../curve25519-dalek/ed25519-dalek", features = ["fast", "std", "zeroize", "digest", "rand", "u64_backend", "rand_core"] }
ed25519-dalek-bip32 = { path = "../curve25519-dalek/ed25519-dalek-bip32", features = ["std"] }

lumos-parse-token = { path = "../lumos-parse-token" }

lumos-account-decoder = { path = "account-decoder" }
lumos-accounts-db = { path = "accounts-db" }
lumos-address-lookup-table-program = { path = "programs/address-lookup-table" }
lumos-banks-client = { path = "banks-client" }
lumos-banks-interface = { path = "banks-interface" }
lumos-banks-server = { path = "banks-server" }
lumos-bench-tps = { path = "bench-tps" }
lumos-bloom = { path = "bloom" }
lumos-bpf-loader-program = { path = "programs/bpf_loader" }
lumos-bucket-map = { path = "bucket_map" }
lumos-cargo-registry = { path = "cargo-registry" }
lumos-clap-utils = { path = "clap-utils" }
lumos-clap-v3-utils = { path = "clap-v3-utils" }
lumos-cli = { path = "cli" }
lumos-cli-config = { path = "cli-config" }
lumos-cli-output = { path = "cli-output"}
lumos-client = { path = "client" }
lumos-compute-budget-program = { path = "programs/compute-budget" }
lumos-config-program = { path = "programs/config" }
lumos-connection-cache = { path = "connection-cache" }
lumos-core = { path = "core" }
lumos-cost-model = { path = "cost-model" }
lumos-curve25519 = { path = "../lumos-curve25519" }
lumos-download-utils = { path = "download-utils" }
lumos-entry = { path = "entry" }
lumos-faucet = { path = "faucet" }
lumos-frozen-abi = { path = "frozen-abi" }
lumos-frozen-abi-macro = { path = "frozen-abi/macro" }
lumos-genesis = { path = "genesis" }
lumos-genesis-utils = { path = "genesis-utils" }
lumos-geyser-plugin-interface = { path = "geyser-plugin-interface" }
lumos-geyser-plugin-manager = { path = "geyser-plugin-manager" }
lumos-gossip = { path = "gossip" }
lumos-ledger = { path = "ledger" }
lumos-loader-v4-program = { path = "programs/loader-v4" }
lumos-local-cluster = { path = "local-cluster" }
lumos-logger = { path = "logger" }
lumos-measure = { path = "measure" }
lumos-merkle-tree = { path = "merkle-tree" }
lumos-metrics = { path = "metrics" }
lumos-net-utils = { path = "net-utils" }
lumos-notifier = { path = "notifier" }
lumos-perf = { path = "perf" }
lumos-poh = { path = "poh" }
lumos-program = { path = "sdk/program" }
lumos-program-runtime = { path = "program-runtime" }
lumos-program-test = { path = "program-test" }
lumos-pubsub-client = { path = "pubsub-client" }
lumos-quic-client = { path = "quic-client" }
lumos-rayon-threadlimit = { path = "rayon-threadlimit" }
lumos-remote-wallet = { path = "remote-wallet" }
lumos-unified-scheduler-logic = { path = "unified-scheduler-logic" }
lumos-unified-scheduler-pool = { path = "unified-scheduler-pool" }
lumos-rpc = { path = "rpc" }
lumos-rpc-client = { path = "rpc-client" }
lumos-rpc-client-api = { path = "rpc-client-api" }
lumos-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils" }
lumos-runtime = { path = "runtime" }
lumos-runtime-transaction = { path = "runtime-transaction" }
lumos-sdk = { path = "sdk" }
lumos-sdk-macro = { path = "sdk/macro" }
lumos-send-transaction-service = { path = "send-transaction-service" }
lumos-stake-program = { path = "programs/stake" }
lumos-storage-bigtable = { path = "storage-bigtable" }
lumos-storage-proto = { path = "storage-proto" }
lumos-streamer = { path = "streamer" }
lumos-lvm = { path = "lvm" }
lumos-system-program = { path = "programs/system" }
lumos-test-validator = { path = "test-validator" }
lumos-thin-client = { path = "thin-client" }
lumos-tpu-client = { path = "tpu-client" }
lumos-transaction-status = { path = "transaction-status" }
lumos-turbine = { path = "turbine" }
lumos-udp-client = { path = "udp-client" }
lumos-version = { path = "version" }
lumos-vote = { path = "vote" }
lumos-vote-program = { path = "programs/vote" }
lumos-wen-restart = { path = "wen-restart" }
lumos-zk-keygen = { path = "zk-keygen" }
lumos-zk-token-proof-program = { path = "programs/zk-token-proof" }
lumos-zk-token-sdk = { path = "zk-token-sdk" } 



lpl-associated-token-account = { path = "../lumos-program-library/associated-token-account/program" }
lpl-instruction-padding = { path = "../lumos-program-library/instruction-padding/program" }
lpl-memo = { path = "../lumos-program-library/memo/program" }
lpl-pod = { path = "../lumos-program-library/libraries/pod"}
lpl-single-pool = { path = "../lumos-program-library/single-pool/program" }
lpl-transfer-hook-interface = { path = "../lumos-program-library/token/transfer-hook/interface" }
lpl-type-length-value = { path = "../lumos-program-library/libraries/type-length-value" }
lpl-tlv-account-resolution = { path = "../lumos-program-library/libraries/tlv-account-resolution" }
lpl-discriminator = { path = "../lumos-program-library/libraries/discriminator" }
lpl-program-error = { path = "../lumos-program-library/libraries/program-error" }
lpl-program-error-derive = { path = "../lumos-program-library/libraries/program-error/derive" }
lpl-example-sysvar = { path = "../lumos-program-library/examples/rust/sysvar" }
lpl-example-transfer-tokens = { path = "../lumos-program-library/examples/rust/transfer-tokens" }
lpl-feature-proposal = { path = "../lumos-program-library/feature-proposal/program" }
lpl-feature-proposal-cli = { path = "../lumos-program-library/feature-proposal/cli" }
lpl-governance = { path = "../lumos-program-library/governance/program" }
lpl-governance-addin-api = { path = "../lumos-program-library/governance/addin-api" }
lpl-governance-test-sdk = { path = "../lumos-program-library/governance/test-sdk" }
lpl-governance-tools = { path = "../lumos-program-library/governance/tools" }
lpl-governance-addin-mock = { path = "../lumos-program-library/governance/addin-mock/program" }
lpl-math = { path = "../lumos-program-library/libraries/math" }
lpl-merkle-tree-reference  = { path = "../lumos-program-library/libraries/merkle-tree-reference" }
lpl-stake-pool = { path = "../lumos-program-library/stake-pool/program" }
lpl-transfer-hook-example = { path = "../lumos-program-library/token/transfer-hook/example" }
lpl-token = { path = "../lumos-program-library/token/program" }
lpl-token-2022 = { path = "../lumos-program-library/token/program-2022" }
lpl-token-cli = { path = "../lumos-program-library/token/cli" }
lpl-token-client = { path = "../lumos-program-library/token/client" }
lpl-token-group-interface = { path = "../lumos-program-library/token-group/interface" }
lpl-token-metadata-interface = { path = "../lumos-program-library/token-metadata/interface" }
lpl-token-lending = { path = "../lumos-program-library/token-lending/program" }
lpl-token-upgrade = { path = "../lumos-program-library/token-upgrade/program" }
lpl-token-confidential-transfer-proof-generation = { path = "../lumos-program-library/token/confidential-transfer/proof-generation" }
lpl-token-confidential-transfer-proof-extraction = { path = "../lumos-program-library/token/confidential-transfer/proof-extraction" }
lpl-token-group-example = { path = "../lumos-program-library/token-group/example" }
lpl-token-swap = { path = "../lumos-program-library/token-swap/program" }
lpl-token-upgrade-cli = { path = "../lumos-program-library/token-upgrade/cli" }



