[package]
name = "lumos-account-decoder"
description = "Lumos account decoder"
documentation = "https://docs.rs/lumos-account-decoder"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
Inflector = { workspace = true }
assert_matches = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bv = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

lumos-transaction-status = { workspace = true }
lumos-config-program = { workspace = true }
lumos-sdk = { workspace = true }
lpl-token = { workspace = true }
lpl-token-2022 = { workspace = true }
lpl-token-group-interface = { workspace = true }
lpl-token-metadata-interface = { workspace = true }
lpl-pod = { workspace = true }


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

